Expose metric about number of virtual threaded tasks from threaded metrics ()